Fix: link to memo regex

--- a/SL4BY020/1.normalization/1.a-gentle-introduction-to-regex.ipynb
+++ b/SL4BY020/1.normalization/1.a-gentle-introduction-to-regex.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le site [Rubular](https://rubular.com/) est un service Web qui permet de tester rapidement la validité d’une expression rationnelle. N’hésitez pas à vous reposer sur ce [mémo](./files/memo-regex.pdf) pour formaliser vos motifs."
+    "Le site [Rubular](https://rubular.com/) est un service Web qui permet de tester rapidement la validité d’une expression rationnelle. N’hésitez pas à vous reposer sur ce [mémo](./data/memo-regex.pdf) pour formaliser vos motifs."
    ]
   },
   {
