--- a/SL4BY020/3.tokenization/1.spacy.ipynb
+++ b/SL4BY020/3.tokenization/1.spacy.ipynb
@@ -13,7 +13,7 @@
    "id": "2b84a2dd-83d3-4e02-8675-df3d39475198",
    "metadata": {},
    "source": [
-    "Considérée comme une alternative moderne à la bibliothèque NTLK (*Natural Language ToolKit*), *spaCy* intègre de très nombreux outils état de l’art pour l’analyse de données textuelles, mobilisables simplement, au prix d’une perte des possibilités de personnalisation.\n",
+    "Considérée comme une alternative moderne à la bibliothèque logicielle NLTK (*Natural Language ToolKit*), *spaCy* intègre de très nombreux outils état de l’art pour l’analyse de données textuelles, mobilisables simplement, au prix d’une perte des possibilités de personnalisation.\n",
     "\n",
     "Une fois installée, la bibliothèque se charge avec l’espace de noms `spacy` :"
    ]
