--- a/SL4BY020/3.tokenization/3.tokenization.ipynb
+++ b/SL4BY020/3.tokenization/3.tokenization.ipynb
@@ -273,6 +273,186 @@
     "for token in doc:\n",
     "    print(token.text)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31ce38fb-ddf5-49ac-8af5-4a8c36701b0f",
+   "metadata": {},
+   "source": [
+    "## Filtrer une liste de tokens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66462552-2c3e-4377-ab6f-821ee4bc7f18",
+   "metadata": {},
+   "source": [
+    "Après la phase de segmentation, il arrive souvent que l’on ne veuille pas conserver tous les tokens identifiés dans un texte."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c2e7876-450d-4de4-b46a-913bc7030fb2",
+   "metadata": {},
+   "source": [
+    "### Supprimer les mots vides"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90cf46db-1a0b-48cf-b1ca-b172252ba202",
+   "metadata": {},
+   "source": [
+    "L‘une des opérations les plus courantes consiste à filtrer les mots vides d’une langue pour ne retenir que ceux signifiants. Chaque modèle de langage dispose d’une propriété `.stop_words` pour les lister :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e476104e-e0b9-413c-b355-875cefed3e2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stopwords_fr = spacy.lang.fr.stop_words.STOP_WORDS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18e35481-6ede-4f94-a236-584aa9bf938c",
+   "metadata": {},
+   "source": [
+    "Le filtrage peut s’effectuer de manière procédurale :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d46cda3-5461-42cc-bef9-d4a38750595d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered = [\n",
+    "    token\n",
+    "    for token in doc_fr\n",
+    "    if token.text.lower() not in stopwords_fr\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "835e14ab-69f8-4080-af71-3dbe19b8c32b",
+   "metadata": {},
+   "source": [
+    "Ou, mieux, grâce à la fonction `filter()` :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7a0961e-8e4a-4b18-9596-3ba02860f7ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered = filter(lambda token: token.text.lower() not in stopwords_fr, doc_fr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd250b19-3fd7-4791-8571-15f38883b4e4",
+   "metadata": {},
+   "source": [
+    "Observons le résultat du traitement :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b402b241-d57f-4078-8b98-453a123c7c51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for token in filtered:\n",
+    "    print(token.text, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1100baf7-a516-4577-8e23-83a70f972913",
+   "metadata": {},
+   "source": [
+    "### Supprimer les signes de ponctuation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3a146ce-aaa3-409b-a9bc-f557eeb26d33",
+   "metadata": {},
+   "source": [
+    "En soi, il n’est pas nécessaire avec *spaCy* de supprimer les signes de ponctuation. L’attribut lexical `.is_punct` permet de les exclure d’un traitement :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2d7fafd-76fb-49dd-8e44-e9cfe0976346",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for token in doc_fr:\n",
+    "    if not token.is_punct:\n",
+    "        print(token.text, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f4ca6e3-d029-40e0-bf81-d0e977f3e65f",
+   "metadata": {},
+   "source": [
+    "Autrement, il est facile de l’intégrer au filtre :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c627c79f-cdaa-404b-bdac-5e37bebf0d70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered = filter(lambda token: token.text.lower() not in stopwords_fr and not token.is_punct, doc_fr)\n",
+    "for token in filtered:\n",
+    "    print(token, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eee1156e-fd8b-4ba1-9d25-23b0921dd100",
+   "metadata": {},
+   "source": [
+    "### Autres traitements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dd69b42-d0c1-42ca-b909-98d6319e4fef",
+   "metadata": {},
+   "source": [
+    "Pour rappel, il existe deux autres attributs lexicaux qui peuvent être utilisés afin de filtrer les tokens :\n",
+    "\n",
+    "- `.is_alpha` : le token est-il constitué de caractères alphabétiques ?\n",
+    "- `.like_num` : le token ressemble-t-il à un nombre ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0de14765-ae42-481f-ba56-6eb9a9643832",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for token in nlp_fr(\"En 1492, Christophe Colomb a semble-t-il découvert l’Amérique.\"):\n",
+    "    if not token.like_num and not token.is_punct:\n",
+    "        print(token)"
+   ]
   }
  ],
  "metadata": {
