Rename and NB on occurrences

--- a/SL4BY020/3.frequencies/1.spacy.ipynb
+++ b/SL4BY020/3.frequencies/1.spacy.ipynb
@@ -460,6 +460,7 @@
     "\n",
     "- `.i` : renvoie l’indice du *token*.\n",
     "- `.is_alpha` : le *token* est-il constitué de caractères alphabétiques ?\n",
+    "- `.is_space` : le *token* fait-il partie de la famille des caractères blancs ?\n",
     "- `.is_punct` : le *token* est-il un signe de ponctuation ?\n",
     "- `.like_num` : le *token* ressemble-t-il à un nombre ?"
    ]
