--- a/SL4BY020/3.frequencies/3.tokenization.ipynb
+++ b/SL4BY020/3.frequencies/3.tokenization.ipynb
@@ -439,6 +439,7 @@
     "Pour rappel, il existe deux autres attributs lexicaux qui peuvent être utilisés afin de filtrer les tokens :\n",
     "\n",
     "- `.is_alpha` : le token est-il constitué de caractères alphabétiques ?\n",
+    "- `.is_space` : le token fait-il partie de la familles des caractères blancs ?\n",
     "- `.like_num` : le token ressemble-t-il à un nombre ?"
    ]
   },
