Better way to find idxmin

--- a/SL4BY020/4.statistics/1.distance-matrix.ipynb
+++ b/SL4BY020/4.statistics/1.distance-matrix.ipynb
@@ -362,7 +362,10 @@
     "# the lowest non-zero distance\n",
     "mask = first_doc != 0\n",
     "\n",
-    "print(f\"Document {np.argmin(first_doc[mask]) + 1} is the nearest from the first document with a score of {np.min(first_doc[mask]):.4f}\",)"
+    "# min index\n",
+    "index_min = first_doc[mask].idxmin()\n",
+    "\n",
+    "print(f\"Document {index_min + 1} is the nearest from the first document with a score of {first_doc[index_min]:.4f}\",)"
    ]
   }
  ],
